refactor(appearance): update to jre17